--- a/estilos.css
+++ b/estilos.css
@@ -10,9 +10,19 @@ body{
     display: grid;
     grid-template-columns: 350px 1fr 200px;
     align-items: center;
+    position: fixed;
+
 }
 .user-info{
-
+    padding-top: 60px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+}
+.user-bio{
+    align-items: center;
+    justify-content: center;
     display: flex;
     flex-direction: row;
 }
@@ -91,8 +101,9 @@ body{
     width: 100%;
 }
 .container{
+
     width: 90%;
-    margin: 0 auto;
+    margin-top: 0 auto;
     display: grid;
     grid-template-columns: repeat(auto-fill,300px);
     grid-auto-rows: 320px;
@@ -141,6 +152,13 @@ body{
     color: white;
     text-align: center;
 }
+.hide {
+    display: none;
+  }
+.myDIV:hover + .hide {
+    display: flex;
+    color: red;
+  }
 .item:hover .item-overlay{
     display: flex;
 }
@@ -197,15 +215,20 @@ body{
 .item-icon-upload img, .item-icon-more img{
     height: 20px;
 }
-.footer{
-    display: grid;
-    gap: 15px;
-    margin-top: 100px;
+.b-example-divider {
+    height: 20px;
+    background-color: white;
+    border: solid rgba(0, 0, 0, .15);
+    border-width: 1px 0;
+    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+  }
+.footer {
+    text-align: center;
     width: 100%;
-    height: 200px;
-    color: lightslategray;
-    font-size: small;
-    grid-template-columns:  repeat(6, 100px);
-    place-content: center;
-
 }
+
+ul {
+    list-style-type:none;
+    list-style-position: inside;
+    justify-items: center;
+  } 
